Diagnose FIFO head waiting separately from owner collection